# Geometry

./: .gitignore  .gitignore.swp  CMakeLists.txt  Intersection.h  Line.cpp  Line.h  Point.cpp  Point.h  README.md  Section.cpp  Section.h  Triangle.cpp  Triangle.h  Vector2.h  main.cpp  res
src/: CMakeLists.txt
src/Geometry/Intersections/: LinesIntersection.cpp  LinesIntersection.h  SectionsIntersection.cpp  SectionsIntersection.h
src/Geometry/LinAlg/: Determinant.cpp  Determinant.h  Matrix.cpp  Matrix.h
src/Geometry/PointInFigure/: PointInTriangle.cpp  PointInTriangle.h
src/Geometry/Primitives/: Line.h  Point.cpp  Point.h  Section.h  Triangle.h  Vector.cpp  Vector.h  Vector2.cpp  Vector2.h
src/Geometry/Triangle/: IsPointbelonged.cpp  IsPointbelonged.h
tests/: CMakeLists.txt  test_intersection.cpp  test_linalgebra.cpp  test_pointInfigure.cpp  test_vector.cpp
